turtleart.lessons.turtleart.Main.Polygon6.scala.error
Source:3: error: '(' expected but identifier found.
	for k (<- 1 to 6) {
            ^Source:6: error: illegal start of simple expression
}
^